--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -8,14 +8,28 @@ on:
       - 10_infra/**
       - .github/workflows/**
   workflow_dispatch:
-    id-token: write
-    contents: read
 
+permissions:
+  id-token: write
+  contents: read
+
+env:
+  TF_VERSION: 1.12.1
+
+defaults: 
+  run:
+    shell: bash
+    working-directory: "10_infra/"
+    
 jobs:
   preview:
     name: "Preview"
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo "Hello World"
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Setup terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
           
