--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -14,6 +14,7 @@ permissions:
   contents: read
 
 env:
+  AWS_RGION: us-east-3
   TF_VERSION: 1.12.1
 
 
@@ -40,5 +41,14 @@ jobs:
       - name: Terraform format
         run: |
           terraform fmt -check
+      - name: Congigure AWS credential
+        uses: aws-actions/configure-aws-credentials@v4.1.0
+        with:
+          aws-region: ${{ enf.AWS_RGION }}
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE_ARN }}
+      - name: Terraform init
+        run: |
+          terraform init -no-color
+
 
           
