--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -14,9 +14,12 @@ permissions:
   contents: read
 
 env:
-  AWS_PROFILE: terraform
   AWS_REGION: ap-northeast-1
   TF_VERSION: 1.12.1
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_PROFILE: terraform
+
 
 
 defaults: 
