--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -16,11 +16,6 @@ permissions:
 env:
   AWS_REGION: ap-northeast-1
   TF_VERSION: 1.12.1
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  AWS_PROFILE: terraform
-
-
 
 defaults: 
   run:
@@ -50,6 +45,10 @@ jobs:
         with:
           aws-region: ${{ env.AWS_REGION }}
           role-to-assume: ${{ secrets.AWS_IAM_ROLE_ARN }}
+
+      - name: Set AWS Profile
+        run: echo "AWS_PROFILE=terraform" >> $GITHUB_ENV
+
       - name: Terraform init
         run: |
           echo "AWS_PROFILE=$AWS_PROFILE"
