デバックログ挿入

--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -54,6 +54,8 @@ jobs:
           echo "AWS_PROFILE=$AWS_PROFILE"
           echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID"
           echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY"
+          aws sts get-caller-identity --profile terraform
+          aws s3 ls s3://dntnbucket002 --profile terraform
           TF_LOG=DEBUG terraform init -no-color
 
 
