--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -54,6 +54,10 @@ jobs:
           echo "AWS_PROFILE=$AWS_PROFILE"
           echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID"
           echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY"
+          mkdir -p ~/.aws
+          echo "[profile terraform]" >> ~/.aws/config
+          echo "region = ap-northeast-1" >> ~/.aws/config
+          echo "output = json" >> ~/.aws/config
           aws configure list-profiles
           cat ~/.aws/config
           cat ~/.aws/credentials
