--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -55,7 +55,7 @@ jobs:
           
           aws configure list-profiles
           export AWS_PROFILE=terraform
-          
-          aws sts get-caller-identity --profile terraform
-          aws s3 ls s3://dntnbucket002 --profile terraform
+
+          aws sts get-caller-identity
+          aws s3 ls s3://dntnbucket002
           TF_LOG=DEBUG terraform init -no-color
