--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -52,10 +52,9 @@ jobs:
           #echo "[profile terraform]" >> ~/.aws/config
           #echo "region = $AWS_REGION" >> ~/.aws/config
           #echo "output = json" >> ~/.aws/config
-          
           #aws configure list-profiles
           #export AWS_PROFILE=terraform
-
           #aws sts get-caller-identity
           #aws s3 ls s3://dntnbucket002
-          TF_LOG=DEBUG terraform init -no-color
+          #TF_LOG=DEBUG terraform init -no-color
+          terraform init -no-color
