--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -67,7 +67,8 @@ jobs:
 
       - name: Terraform plan
         run: |
-          aws iam list-attached-role-policies --role-name app_iam_role 
+        　aws iam get-role --role-name app_iam_role
+          #aws iam list-attached-role-policies --role-name app_iam_role 
           terraform plan \
             -var 'project=${{ env.TF_PROJECT }}' \
             -var 'environment=${{ env.TF_ENVIRONMENT }}' \
