--- a/.github/workflows/z.slack-notify.yml
+++ b/.github/workflows/z.slack-notify.yml
@@ -12,29 +12,29 @@ jobs:
         uses: slackapi/slack-github-action@v2.1.0
         with:
           channel-id: "C090JHN29TL"
-          playload: |
+          payload: |
             {
-                "attachments": [
+              "attachments": [
+                {
+                  "blocks": [
                     {
-                        "blocks": [
-                            {
-                                "type": "header",
-                                "text": {
-                                    "type": "plain_text",
-                                    "text": "Message Header",
-                                    "emoji": true
-                                }
-                            },
-                            {
-                                "type": "section",
-                                "text": {
-                                    "type": "mrkdwn",
-                                    "text": "Hellow World :ghost:"
-                                }
-                            }
-                        ]
+                      "type": "header",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "Message Header",
+                        "emoji": true
+                      }
+                    },
+                    {
+                      "type": "section",
+                        "text": {
+                        "type": "mrkdwn",
+                        "text": "Hellow World :ghost:"
+                      }
                     }
-                ]
+                  ]
+                }
+              ]
             }
-          env: 
-            SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        env: 
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
