--- a/.github/workflows/z.slack-notify.yml
+++ b/.github/workflows/z.slack-notify.yml
@@ -12,6 +12,7 @@ jobs:
         uses: slackapi/slack-github-action@v2.1.0
         with:
           webhook: ${{ secrets.SLACK_WEBHOOK_URL }} 
+          webhook-type: incoming-webhook
           #channel-id: "C090JHN29TL"
           payload: |
             {
