Slack通知の追加

--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -28,6 +28,8 @@ jobs:
   preview:
     name: "Preview"
     runs-on: ubuntu-latest
+    outputs:
+      TF_PLAN_EXITCODE: ${{ steps.plan.outputs.exitcode }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -66,6 +68,8 @@ jobs:
           terraform validate -no-color
 
       - name: Terraform plan
+        id: plan
+        continue-on-error: true
         run: |
           #aws iam get-role --role-name app_iam_role
           #aws iam list-attached-role-policies --role-name app_iam_role 
@@ -77,3 +81,36 @@ jobs:
             -input=false \
             -no-color \
             -detailed-exitcode
+
+      - name: Slack notify
+        uses: slackapi/slack-github-action@v2.1.0
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }} 
+          webhook-type: incoming-webhook
+          #channel-id: "C090JHN29TL"
+          payload: |
+            {
+              "attachments": [
+                {
+                  "blocks": [
+                    {
+                      "type": "header",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "Request for approve",
+                        "emoji": true
+                      }
+                    },
+                    {
+                      "type": "section",
+                        "text": {
+                        "type": "mrkdwn",
+                        "text": "${{ github.server_url }}/${{ github.repository }}/actions/run/${{ github.run_id }}"
+                      }
+                    }
+                  ]
+                }
+              ]
+            }
+        env: 
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
