Slack通知を追加

--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -146,6 +146,7 @@ jobs:
           terraform init -no-color
 
       - name: Terraform apply
+        id: apply
         run: |
           terraform apply \
             -var 'project=${{ env.TF_PROJECT }}' \
@@ -155,4 +156,37 @@ jobs:
             -input=false \
             -no-color \
             -auto-approve
-  
+
+      - name: Slack notify
+        if: always()
+        uses: slackapi/slack-github-action@v2.1.0
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }} 
+          webhook-type: incoming-webhook
+          #channel-id: "C090JHN29TL"
+          payload: |
+            {
+              "attachments": [
+                {
+                  "blocks": [
+                    {
+                      "type": "header",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "Runner Finished: ${{ steps.apply.outcome }}",
+                        "emoji": true
+                      }
+                    },
+                    {
+                      "type": "section",
+                        "text": {
+                        "type": "mrkdwn",
+                        "text": "${{ github.server_url }}/${{ github.repository }}/actions/run/${{ github.run_id }}"
+                      }
+                    }
+                  ]
+                }
+              ]
+            }
+        env: 
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
